--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -25,7 +25,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-standalone:
     runs-on: ubuntu-latest
 
     steps:
@@ -93,21 +93,21 @@ jobs:
         # This condition ensures this step only runs for workflow_dispatch events.
 
   # Deploy HTML to Github pages.
-  deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    needs: build
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+#  deploy:
+#    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+#
+#    needs: build
+#
+#    permissions:
+#      pages: write
+#      id-token: write
+#
+#    environment:
+#      name: github-pages
+#      url: ${{ steps.deployment.outputs.page_url }}
+#
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Deploy to GitHub Pages
+#        id: deployment
+#        uses: actions/deploy-pages@v4
